gcc/testsuite/rust/rustc/ui/issues/issue-47486.rs
fn main() {
    () < std::mem::size_of::<_>(); // { dg-error ".E0308." "" { target *-*-* } }
    [0u8; std::mem::size_of::<_>()]; // { dg-error ".E0282." "" { target *-*-* } }
}

